--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,15 @@
 command = "npm run build"
 publish = "build/client"
 
+[functions]
+directory = ".netlify/functions-internal"
+included_files = ["build/server/**"]
+
+[[redirects]]
+from = "/*"
+to = "/.netlify/functions/handler"
+status = 200
+
 [dev]
 command = "npm run dev"
 framework = "vite"
