--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
     "@remix-run/node-fetch-server": "0.8.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
     "@types/express": "^5.0.1",
     "@types/react": "^19.1.2",
