--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,11 @@ publish = "build/client"
 [dev]
 command = "react-router dev"
 
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
 [[headers]]
 for = "/assets/*"
   [headers.values]
