--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.7.1"
   },
   "devDependencies": {
+    "@netlify/vite-plugin-react-router": "^1.0.1",
     "@react-router/dev": "^7.7.1",
     "@remix-run/node-fetch-server": "0.8.0",
     "@tailwindcss/typography": "^0.5.16",
